# qsafp-open-core

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.md.txt  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON_TABLE.md  CONTRIBUTING.md  CONTRIBUTING.md.txt  CONTRIBUTOR_CLA.md  CORE_SRCS =.txt  DEMO.md  DEMO.md.txt  GOVERNANCE.md  HARDWARE_SPEC.md  LICENSE  LICENSE.txt  Makefile  PREMIUM_FEATURES.md  QVN_DEMO.html  QVN_DEMO.md  README.md  README.md.txt  SECURITY.md  Test_Results.md  XPosts_Highlights.md  _config.yml  env.js  ersfunctqsafp-open-core  index.html  overview.md  perf-laptop.txt  qsafp_demo_readme.md  qsafp_llm_demo.js  readme_qsafp_patched.js  results.md  test-ssh.txt  verify-laptop.txt
SAFETY/: README.md  basic-threat-detection.js  perf-test.js  qsafp_v21_upgrade.js
TESTS/: cJSON.c  cJSON.h  multi_threat_scenarios.json  multi_threat_test.c
bench/: grok1-step-run.js
benchmarks/: perf-test.js  results.md  verify-v21.js
demo/: README_demo.md  demo_main.c  simple_loop_demo.py  validator_emulator.py
docs/: FAQ.md
firmware/: README.me
integration/: Anthropic  Intel  NVIDIA  Openai  xAI
integration-kits/: README.md  qsafp_api_spec.json  qsafp_integration_examples.js
integration_kit_v1_0/: README.md
qsafp-cuda-demo/: CMakeLists.txt
qsafp-cuda-demo/src/: main.cu  main_bad.cu
scripts/: auto-log-results.js
tools/: provider-grok1-latency.js
v2.0/: qsafp_mock_implementation.js  qsafp_xai_readme.md
v2.1/: README.md  basic-threat-detection.js  index.js  qsafp_threat_detection (1).js  qsafp_threat_detection.js  qsafp_v21_api_spec (1).json  (+4 more)
(+27 files in other folders)
